--- a/css/fstyle.css
+++ b/css/fstyle.css
@@ -1,8 +1,11 @@
 body{	
 
-	background-color: rgb(255,240,190);
+	background-color: rgb(255,230,190);
 }
-
+@font-face{
+	font-family: "forte";
+	src: url(forte_.ttf);
+}
 .no0{
 	padding: 0;
 	margin: 0;
