--- a/css/fstyle.css
+++ b/css/fstyle.css
@@ -3,8 +3,8 @@ body{
 	background-color: rgb(255,230,190);
 }
 @font-face{
-	font-family: "forte";
-	src: url('forte_.ttf');
+	font-family: 'forte';
+	src: url("forte_.ttf");
 }
 .no0{
 	padding: 0;
