--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@ body{
 	background-color: rgb(255,230,190);
 }
 @font-face{
-	font-family: "forte";
-	src: url('forte_.ttf');
+	font-family: 'forte';
+	src: url("forte_.ttf");
 }
 
 .first{
