--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
 	background-color: rgb(255,230,190);
 }
 @font-face{
-	font-family: 'forte';
+	font-family: "forte";
 	src: url("forte_.ttf");
 }
 
