--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,13 @@ body{
 	font-size: 20px;
 	font-family: impact;
 }
+.wechat img{
+	position: fixed;
+	left:20px;
+	top: 280px;
+	width:108px;
+	height: 108px;
+}
 .text{
 	text-align: left;
 	padding-left: 13%;
